NCSPRIN-48 HM open project: show selectors attributes, correct exception

--- a/src/main/webapp/resources/css/styles-projview.css
+++ b/src/main/webapp/resources/css/styles-projview.css
@@ -48,6 +48,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     width:100%;
+    min-height: 500px;
 }
 
 .selector-info-mess, .graphic-info-mess{
