--- a/src/main/webapp/resources/css/customstyles.css
+++ b/src/main/webapp/resources/css/customstyles.css
@@ -107,6 +107,21 @@ footer {
 .navbar-default .navbar-link:hover {
     color: lightgrey;
 }
+.btn-circle {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
+    position: absolute;
+}
+
+#add-button {
+    color: #080808;
+    right: 3%;
+    bottom: 3.5em;
+}
 
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
