--- a/src/main/webapp/resources/css/customstyles.css
+++ b/src/main/webapp/resources/css/customstyles.css
@@ -87,6 +87,12 @@ footer {
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
     color: lightgrey;
+
+}
+.navbar>.container .navbar-brand,
+.navbar>.container-fluid .navbar-brand {
+    font-family: 'Lobster', cursive;
+    font-size: 2.3em;
 }
 .navbar-default .navbar-text {
     color: lightgrey;
