NCSPRIN-97 make two tabs - for own projects and shared projects close sharing, if user isn't author of projects

--- a/src/main/webapp/resources/css/customstyles.css
+++ b/src/main/webapp/resources/css/customstyles.css
@@ -146,6 +146,11 @@ footer {
     position: absolute;
 }
 
+.inactive-divs{
+    display:none;
+}
+
+
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
         color: black;
