NCSPRIN-97 fix user dashboard and sharing

--- a/src/main/webapp/resources/css/styles-dashboard.css
+++ b/src/main/webapp/resources/css/styles-dashboard.css
@@ -8,16 +8,12 @@
     min-width: 300px;
 }
 
-.pr-type, .pr-date {
-    margin: 5px 5px;
-}
-
-.pr-date {
-
-}
-
 .project-list{
     margin: 0px;
+}
+
+.prj-list-info{
+    margin-top: 10px;
 }
 
 
