NCSPRIN-97 add search projects in user dashboard

--- a/src/main/webapp/resources/css/customstyles.css
+++ b/src/main/webapp/resources/css/customstyles.css
@@ -158,7 +158,9 @@ footer {
 .inactive-divs{
     display:none;
 }
-
+.search-input{
+    margin: 1% 1% 1% -1%;
+}
 
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
