NCSPRIN-97 fix search projects on user dashboard

--- a/src/main/webapp/resources/css/customstyles.css
+++ b/src/main/webapp/resources/css/customstyles.css
@@ -159,7 +159,8 @@ footer {
     display:none;
 }
 .search-input{
-    margin: 1% 1% 1% -1%;
+    padding: 0px;
+    margin: 3px;
 }
 
 @media (max-width: 767px) {
