--- a/src/main/webapp/resources/css/styles-dashboard.css
+++ b/src/main/webapp/resources/css/styles-dashboard.css
@@ -5,7 +5,7 @@
 /*.tooltip-arrow,*/
 .pr-name + .tooltip > .tooltip-inner {
    /*background-color: #12b7ff;*/
-    min-width: 200px;
+    min-width: 300px;
 }
 
 .project-list{
@@ -16,6 +16,17 @@
     margin-top: 10px;
 }
 
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(gif-load.gif) center no-repeat #fff;
+}
 
 
 
