NCSPRIN-97 validation on client side for user creation form

--- a/src/main/webapp/resources/css/customstyles.css
+++ b/src/main/webapp/resources/css/customstyles.css
@@ -3,7 +3,8 @@
 }
 
 .conn-field + .tooltip.right .tooltip-arrow,
-.selectorsPar + .tooltip.right .tooltip-arrow
+.selectorsPar + .tooltip.right .tooltip-arrow,
+.userCreateInput + .tooltip.right .tooltip-arrow
 {
     border-right-color: #ebccd1;
 }
@@ -16,7 +17,8 @@
 }
 
 .conn-field + .tooltip > .tooltip-inner,
-.selectorsPar + .tooltip > .tooltip-inner
+.selectorsPar + .tooltip > .tooltip-inner,
+.userCreateInput + .tooltip > .tooltip-inner
 {
     min-width: 200px;
     color: #a94442;
