NCSPRIN-97 fix preview data table for dv settings

--- a/src/main/webapp/resources/css/customstyles.css
+++ b/src/main/webapp/resources/css/customstyles.css
@@ -108,7 +108,9 @@ footer {
     padding-top: 20px;
 }
 
-
+#dvTableBlock{
+    overflow-x: auto;
+}
 /*  navbar  */
 
 .navbar-default .navbar-nav>li>a:hover,
