--- a/src/main/webapp/resources/css/styles-dashboard.css
+++ b/src/main/webapp/resources/css/styles-dashboard.css
@@ -5,7 +5,8 @@
 /*.tooltip-arrow,*/
 .pr-name + .tooltip > .tooltip-inner {
    /*background-color: #12b7ff;*/
-    min-width: 300px;
+    width: 150px;
+    word-wrap: break-word;
 }
 
 .project-list{
@@ -20,17 +21,6 @@
     margin-bottom: 10px;
 }
 
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
-.se-pre-con {
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background: url(gif-load.gif) center no-repeat #fff;
-}
 
 
 
