--- a/src/main/webapp/resources/css/styles-projview.css
+++ b/src/main/webapp/resources/css/styles-projview.css
@@ -1,3 +1,5 @@
+
+
 .prjDesc{
     max-height: 200px;
     overflow-x: auto;
@@ -9,14 +11,6 @@
     color: #5bc0de;
 }
 
-.projname {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.projdescription {
-    text-align: left;
-}
 
 .author {
     margin-top: 15px;
@@ -54,7 +48,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     width:100%;
-    min-height: 500px;
+    /*min-height: 500px;*/
 }
 
 .selector-info-mess, .graphic-info-mess{
