NCSPRIN-97 fix dv graph

--- a/src/main/webapp/resources/css/styles-projview.css
+++ b/src/main/webapp/resources/css/styles-projview.css
@@ -34,6 +34,12 @@
 .graphname {
     padding: 20px;
     text-align: center;
+    width: inherit;
+    word-wrap: break-word;
+}
+
+.mathName{
+    word-wrap: break-word;
 }
 
 .graphmath {
