NCSPRIN-97 confirm delete window

--- a/src/main/webapp/resources/css/styles-dashboard.css
+++ b/src/main/webapp/resources/css/styles-dashboard.css
@@ -2,6 +2,10 @@
     margin-top: 15px;
 }
 
+.projdel{
+    word-wrap: break-word;
+}
+
 /*.tooltip-arrow,*/
 .pr-name + .tooltip > .tooltip-inner {
    /*background-color: #12b7ff;*/
